Backface culling workaround to address a normals issue, updated eject text for puzzle game, tweaks in main twine wording

--- a/HP Labs Main Twine and JS Projects/cathysl/cathysl_rotation.html
+++ b/HP Labs Main Twine and JS Projects/cathysl/cathysl_rotation.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p align="center">This will have a proper eject text once I figure out where this game fits. For now, <b><a href="../index.html" target="_parent">CLICK HERE.</a></b>
+<p align="center"><b><a href="../index.html" target="_parent">Walk away from this machine</a></b>
 <br><canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="js/GraphicsCommon.js"></script>
