--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -366,15 +366,15 @@ updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGa
 
 &lt;/center&gt;</tw-passagedata><tw-passagedata pid="2" name="playerPath1-amnesia" tags="VO" position="1463.3333333333333,381" size="100,100">Press the V key at any time to turn on or off automated Voiceover.
 
-This game contains many other kinds of games, sort of like a digital museum. It&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real.
+This game contains many different kinds of interactions, like a digital museum. It&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real.
 
-You&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based.
+You&#39;ll be exploring an abandoned game studio through text such as this, but the rough prototypes you&#39;ll discover are a mix of 2D, 3D, and also text-based.
 
-You can backtrack by using the 👈 button.
+Backtrack at any time with the 👈 button. This maze folds on itself. There will be déjà vu.
 
 [[explore the office-&gt;officeStart]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Press the V key at any time to turn on or off automated Voiceover. This game contains many other kinds of games, sort of like a digital museum. It\&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real. You\&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based. You can backtrack by using the finger pointing left button.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="3" name="officeStart" tags="VO" position="1751,540" size="100,100">You&#39;re in an open kitchen at the center of the office.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Press the V key at any time to turn on or off automated Voiceover. This game contains many different kinds of interactions, like a digital museum. It\&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real. You\&#39;ll be exploring an abandoned game studio through text such as this, but the rough prototypes you\&#39;ll discover are a mix of 2D, 3D, and also text-based. Backtrack at any time with the finger left button. This maze folds on itself. There will be déjà vu.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="3" name="officeStart" tags="VO" position="1751,540" size="100,100">You&#39;re in an open kitchen at the center of the office.
 
 Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise.
 
@@ -390,7 +390,7 @@ Vending machines are behind you. A box with a key drawn on it is on the counter 
 
 [[step inside the elevator-&gt;futureTower]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You hear clicks of a ratcheting gear, swaying chains, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="futureTower" tags="futureTower VO" position="1858.6666666666667,272.6666666666667" size="100,100">After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You hear clicks of a ratcheting gear, swaying chains, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="futureTower" tags="futureTower VO" position="1858.6666666666667,272.6666666666667" size="100,100">After an uncomfortably long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
 
 (link: &quot;walk up to get a closer look at the window&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_to_the_elevator&amp;file=FutureView&#39;)]
 
@@ -401,7 +401,7 @@ Vending machines are behind you. A box with a key drawn on it is on the counter 
 
 (link: &quot;lick the delicious looking poster&quot;)[(goto-url: &#39;unity_loader.html?phrase=Shake_to_wake_up&amp;file=Infinite_Cube_Swarm&#39;)]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="6" name="officeNToyRoom" tags="VO" position="1943,579" size="100,100">You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars, and several other things to play with.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;After an uncomfortably long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="6" name="officeNToyRoom" tags="VO" position="1943,579" size="100,100">You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars, and several other things to play with.
 
 (link: &quot;inspect the snow globe&quot;)[(goto-url: &#39;unity_loader.html?phrase=Put_this_toy_down&amp;file=TurnTableCar&#39;)]
 
@@ -444,27 +444,28 @@ Want to use it?
 
 [[punch in 1983 (obviously)-&gt;pastOffice]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Yep, that is definitely a time machine. Want to use it?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="14" name="pastOffice" tags="oldOffice VO" position="2100.333333333333,697.6666666666667" size="100,100">You&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Yep, that is definitely a time machine. Want to use it?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="14" name="pastOffice" tags="oldOffice VO" position="2100.333333333333,697.6666666666667" size="100,100">You&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage? You are soaking wet and cold from the time travel process, but would prefer to not think about what just happened.
 
 [[Step back into the main office-&gt;oldOfficeMain]]
 
 (link: &quot;Take the time machine farther back, to 1818&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_in_the_time_machine&amp;file=HOne&#39;)]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="oldOfficeMain" tags="oldOffice VO" position="2099.6666666666665,820.6666666666667" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what&#39;s here is also more spacious.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage? You are soaking wet and cold from the time travel process, but would prefer to not think about what just happened.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="oldOfficeMain" tags="oldOffice VO" position="2099.6666666666665,820.6666666666667" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what&#39;s here is also more spacious.
 
 [[enter the private office on the left-&gt;oldOfficeL]]
 [[enter the private office in the middle-&gt;oldOfficeM]]
 [[enter the private office on the right-&gt;oldOfficeR]]
+[[enter the opening into the infinite abyss-&gt;oldOfficeAbyss]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what\&#39;s here is also more spacious.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="oldOfficeL" tags="oldOffice VO" position="1951.3333333333333,817.3333333333333" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what\&#39;s here is also more spacious.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="oldOfficeL" tags="oldOffice VO" position="1951.3333333333333,817.3333333333333" size="100,100">This must have been the boss&#39;s office. This setup looks serious. Let&#39;s see what it can do.
 
 (link: &quot;boot up the computer to check out the BBS&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;This must has been the boss\&#39;s office. This setup looks serious. I wonder what it can do?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="17" name="oldOfficeM" tags="oldOffice VO" position="2103,964" size="100,100">It appears this employee was either being unproductive, or doing research related to their own game development. Hard to say.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;This must have been the boss\&#39;s office. This setup looks serious. Let\&#39;s see what it can do.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="17" name="oldOfficeM" tags="oldOffice VO" position="2043,964" size="100,100">It appears this employee was either being unproductive, or doing research related to their own game development. Hard to say.
 
 (link: &quot;insert the Space Shot Sam floppy disk&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;It appears this employee was either being unproductive, or doing research related to their own game development. Hard to say.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="18" name="oldOfficeR" tags="oldOffice VO" position="2238,809" size="100,100">Wow! This computer has a hard drive! Amazing!
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;It appears this employee was either being unproductive, or doing research related to their own game development. Hard to say.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="18" name="oldOfficeR" tags="oldOffice VO" position="2209.6666666666665,952.3333333333334" size="100,100">Wow! This computer has a hard drive! Amazing!
 
 (link: &quot;try out this new computer&#39;s one pre-installed game&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
 
@@ -493,7 +494,23 @@ Alan Zaring: (link: &quot;Snowglobe music&quot;)[(goto-url: &#39;unity_loader.ht
 Justin Chin: (link: &quot;Angelbot&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=jchingamesexperiments_angelbot~&#39;)]
 
 This project was made by members of (link-repeat: &quot;HomeTeamGameDev.com
-Apply to make games with us!&quot;)[(open-url: &#39;https://HomeTeamGameDev.com&#39;)]</tw-passagedata></tw-storydata>
+Apply to make games with us!&quot;)[(open-url: &#39;https://HomeTeamGameDev.com&#39;)]</tw-passagedata><tw-passagedata pid="20" name="oldOfficeAbyss" tags="VO oldOffice" position="2252.9999999999995,804" size="100,100">You feel yourself turning into soup from just thinking about going towards the opening, but are physically unable to make any movement that direction.
+
+Dizzy, your hands start to fall off until you use each to twist the other back on tighter.
+
+The smell of melted butter is so thick you feel it on your skin.
+
+Squinting, it looks almost like a waterless ocean, filled instead with rolling clouds. Why does it sound like burning?
+
+Deep loneliness sets in. Your legs itch, your shoulders itch, your hair itches, your elbows itch, Venus seems close, your fingertips tingle. You abruptly become wildly angry, to a degree you can&#39;t remember ever being before.
+
+Eyelids close tightly involuntarily, jaw clenches, every muscle flexes, you feel your mouth getting dry.
+
+Can&#39;t go forward. Something is terribly wrong here.
+
+Maybe the time machine wasn&#39;t finished?
+
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You feel yourself turning into soup from just thinking about going towards the opening, but are physically unable to make any movement that direction. Dizzy, your hands start to fall off until you use each to twist the other back on tighter. The smell of melted butter is so thick you feel it on your skin. Squinting, it looks almost like a waterless ocean, filled instead with rolling clouds. Why does it sound like burning? Deep loneliness sets in. Your legs itch, your shoulders itch, your hair itches, your elbows itch, Venus seems close, your fingertips tingle. You abruptly become wildly angry, to a degree you can\&#39;t remember ever being before. Eyelids close tightly involuntarily, jaw clenches, every muscle flexes, you feel your mouth getting dry. Can\&#39;t go forward. Something is terribly wrong here. Maybe the time machine wasn\&#39;t finished?&#39;)&quot;&gt;</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
